--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Verwaltung/studiengangAnzeigen.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Verwaltung/studiengangAnzeigen.html.twig
@@ -113,7 +113,7 @@
                 </li>
             {% endfor %}
         </ul>
-        <a id="add-another-vertiefung">Vertiefung hinzufügen</a>
+        <a id="add-another-vertiefung">Vertiefungsrichtung hinzufügen</a>
 
         <h4 style="font-weight: bold">Fachgebiete</h4>
         <ul id="fachgebiet-fields-list" data-prototype=
