Modulplanung  Anpassung Twigerstellung Aufräumen

--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Navigation/dozentNav.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Navigation/dozentNav.html.twig
@@ -7,7 +7,7 @@
             <a href="{{ path('eigeneModule') }}">Modulansicht(verwaltbare)</a>
         </li>
         <li role="presentation">
-            <a href="#{# {{ path('modulplanung') }} #}">Modulplanung</a>
+            <a href="{{ path('planungAnzeigen') }}">Modulplanung</a>
         </li>
     {% endif %}
 {% endif %}
