--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Veranstaltung/planungsUebersicht.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Veranstaltung/planungsUebersicht.html.twig
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="table-responsive">
         <ul>
-            <li><a href="">Neue Planung erstellen</a></li>
+            <li><a href="{{ path('planungErstellen') }}">Neue Planung erstellen</a></li>
         </ul>
         <table class="table table-bordered">
             <thead>
@@ -26,4 +26,13 @@
             </tbody>
         </table>
     </div>
+    {% for type, messages in app.session.flashBag.all %}
+        {% for message in messages %}
+            {%if type == 'info'%}
+                <script>
+                    alert('{{ message|raw }}');
+                </script>
+            {%endif%}
+        {% endfor %}
+    {% endfor %}
 {% endblock %}
