--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Veranstaltung/planungsUebersicht.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Veranstaltung/planungsUebersicht.html.twig
@@ -20,7 +20,7 @@
                     <td><a href="">{{planung.getName()}}</a></td>
                     <td>{{planung.getErstellungsdatum()|date('d.m.Y')}}</td>
                     <td><a href="">freigeben</a></td>
-                    <td><a href="">löschen</a></td>
+                    <td><a href="{{ '/restricted/dozent/planungLoeschen/'~planung.getModulID() }}">löschen</a></td>
                 </tr>
             {% endfor %}
             </tbody>
