--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Veranstaltung/planungErstellen.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Veranstaltung/planungErstellen.html.twig
@@ -30,6 +30,9 @@
             {{ form_row(form.sprache) }}
             {{ form_row(form.literatur) }}
             {{ form_row(form.voraussetzungInh) }}
+            {{ form_row(form.lehrveranstaltungen) }}
+            {{ form_row(form.pruefungsformen) }}
+            {{ form_row(form.voraussetzungenLP) }}
         </table>
         {{ form_end(form) }}
     </div>
