--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/layout.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/layout.html.twig
@@ -7,9 +7,9 @@
     <title>MHB-VS</title>
 
     <!-- Bootstrap -->
-    <link href="{{ asset('bundles/fhbingenmhb/css/bootstrap.css') }}" rel="stylesheet">
+    <link href="{{ asset('bundles/fhbingenmhb/css/bootstrap.css') }}" rel="stylesheet" />
     <!-- own Styles -->
-    <link href="{{ asset('bundles/fhbingenmhb/css/style.css') }}" rel="stylesheet">
+    <link href="{{ asset('bundles/fhbingenmhb/css/style.css') }}" rel="stylesheet" />
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -20,7 +20,10 @@
 
 
     <script type='text/javascript' src="http://code.jquery.com/jquery-latest.js"></script>
-    <script type='text/javascript' src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+    {#<script type='text/javascript' src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>#}
+    <script type="text/javascript" src="{{ asset('bundles/fhbingenmhb/js/bootstrap.min.js') }}"></script>
+    {#<script type="text/javascript" src="{{ asset('bundles/fhbingenmhb/js/bootstrap.js') }}"></script>#}
+    <script type="text/javascript" src="{{ asset('bundles/fhbingenmhb/js/jquery.tablesorter.min.js') }}"></script>
 
     <style type="text/css">
         body {
