--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Verwaltung/userverwaltung.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Verwaltung/userverwaltung.html.twig
@@ -37,6 +37,9 @@
                 </td>
             </tr>
         </table>
+        <ul>
+            <li><a href="{{ path('passwdReset') }}">Alle Passwörter zurücksetzen</a></li>
+        </ul>
     </div>
 
     {% for type, messages in app.session.flashBag.all %}
