--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Veranstaltung/modulCodeUebersicht.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Veranstaltung/modulCodeUebersicht.html.twig
@@ -42,5 +42,15 @@
         </table>
     </div>
 
+    {% for type, messages in app.session.flashBag.all %}
+        {% for message in messages %}
+            {%if type == 'info'%}
+                <script>
+                    alert('{{ message|raw }}');
+                </script>
+            {%endif%}
+        {% endfor %}
+    {% endfor %}
+
 
 {% endblock %}
