--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/InsertForm/lehrender.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/InsertForm/lehrender.html.twig
@@ -1,5 +1,7 @@
 {% extends "::base.html.twig" %}
 
+{# TODO: löschen, wenn InsertFormController gelöscht wurde #}
+
 {% block title %}Formulartest{% endblock %}
 
 {% form_theme form _self %}
