--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/eigeneModule.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/eigeneModule.html.twig
@@ -2,12 +2,10 @@
 
 {% block content %}
     <script type="text/javascript">
-        $(document).ready(function()
-                {
-                    $("#modulverantwortlicher").tablesorter();
-                    $("#lehrender").tablesorter();
-                }
-        );
+        $(document).ready(function () {
+            $("#modulverantwortlicher").tablesorter();
+            $("#lehrender").tablesorter();
+        });
     </script>
     <div class="table-responsive">
         <h3>Module als Modulverantwortlicher</h3>
@@ -27,14 +25,14 @@
             {% set count = 0 %}
             {% for veranstaltung in modulverantwortung %}
                 <tr>
-                    <td>{{veranstaltung.name}}</td>
-                    <td>{{veranstaltung.kuerzel}}</td>
+                    <td>{{ veranstaltung.name }}</td>
+                    <td>{{ veranstaltung.kuerzel }}</td>
                     {# bei Date wird immer |date('Y-m-d') benötigt um als String zu casten #}
-                    <td>{{veranstaltung.erstellungsdatum|date('d.m.Y')}}</td>
-                    <td>{{veranstaltung.haeufigkeit}}</td>
+                    <td>{{ veranstaltung.erstellungsdatum|date('d.m.Y') }}</td>
+                    <td>{{ veranstaltung.haeufigkeit }}</td>
                     <td>
                         {% for name in mLehrende[count] %}
-                            {{name}}<br />
+                            {{ name }}<br/>
                         {% endfor %}
                     </td>
                 </tr>
@@ -57,11 +55,12 @@
             <tbody>
             {% for veranstaltung in modullehrend %}
                 <tr>
-                    <td>{{veranstaltung.name}}</td>
-                    <td>{{veranstaltung.kuerzel}}</td>
-                    <td>{{veranstaltung.erstellungsdatum|date('d.m.Y')}}</td>
-                    <td>{{veranstaltung.haeufigkeit}}</td>
-                    <td>{{veranstaltung.beauftragter}}</td>
+                    <td>{{ veranstaltung.name }}</td>
+                    <td>{{ veranstaltung.kuerzel }}</td>
+                    {# bei Date wird immer |date('Y-m-d') benötigt um als String zu casten #}
+                    <td>{{ veranstaltung.erstellungsdatum|date('d.m.Y') }}</td>
+                    <td>{{ veranstaltung.haeufigkeit }}</td>
+                    <td>{{ veranstaltung.beauftragter }}</td>
                 </tr>
             {% endfor %}
             </tbody>
