--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/MHB/MHB_Modul_Liste.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/MHB/MHB_Modul_Liste.html.twig
@@ -1,12 +1,14 @@
 {% extends 'FHBingenMHBBundle::layout.html.twig' %}
 
-{#bei Date wird immer |date('Y-m-d') benötigt um als String zu casten#}
-
 {% block content %}
-
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $("#table").tablesorter();
+        });
+    </script>
     <div class="table-responsive">
         <h3>Modulhandbücher</h3>
-        <table class="table table-bordered">
+        <table id="table" class="table table-bordered tablesorter">
             <thead>
             <tr>
                 <th>Modul</th>
@@ -19,18 +21,14 @@
             <tbody>
             {% for entity in mhb %}
                 <tr>
-                        <td><a href="{{'/restricted/dozent/modulbearbeiten/'~entity['Modul_ID']}}">{{ entity['name'] }}</td>
-                        <td>{{ entity['kuerzel'] }}</td>
-                        <td>{{ entity['code'] }}</td>
-                        <td>{{ entity['versionsnummer'] }}</td>
-                        <td>{{ entity['titel']~' '~entity['nachname'] }}</td>
-
-            </tbody>
+                    <td><a href="{{ '/restricted/dozent/modulbearbeiten/'~entity['Modul_ID'] }}">{{ entity['name'] }}</td>
+                    <td>{{ entity['kuerzel'] }}</td>
+                    <td>{{ entity['code'] }}</td>
+                    <td>{{ entity['versionsnummer'] }}</td>
+                    <td>{{ entity['titel']~' '~entity['nachname'] }}</td>
                 </tr>
             {% endfor %}
             </tbody>
         </table>
-
-
     </div>
 {% endblock %}
