--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Veranstaltung/modulCodeErstellung.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Veranstaltung/modulCodeErstellung.html.twig
@@ -11,9 +11,8 @@
 {% endblock form_row %}
 
 {% block content %}
-    <h3>Modul Bearbeiten</h3>
+    <h3>Modul bearbeiten</h3>
     <div class="table-responsive">
-
         {{ form_start(form, {attr: {novalidate: 'novalidate'}}) }}
         <table class="table table-bordered">
             {{ form_errors(form) }}
