--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Verwaltung/userverwaltung.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Verwaltung/userverwaltung.html.twig
@@ -1,6 +1,7 @@
 {% extends 'FHBingenMHBBundle::layout.html.twig' %}
 
 {% block content %}
+    {# TODO: Layout so sinnvoll? Keine Sortierung möglich#}
     <div class="table-responsive">
         <table class="table table-bordered">
             <tr>
