--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Veranstaltung/planungsUebersicht.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Veranstaltung/planungsUebersicht.html.twig
@@ -34,11 +34,11 @@
 
     {% for type, messages in app.session.flashBag.all %}
         {% for message in messages %}
-            {%if type == 'info'%}
-                <script>
+            {% if type == 'info' %}
+                <script type="text/javascript">
                     alert('{{ message|raw }}');
                 </script>
-            {%endif%}
+            {% endif %}
         {% endfor %}
     {% endfor %}
 
