--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/MHB/mhbErstellung.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/MHB/mhbErstellung.html.twig
@@ -7,7 +7,7 @@
         });
     </script>
     <div class="table-responsive">
-        <h3>Modulhanderstellung</h3>
+        {#<h3>Modulhandbucherstellung</h3>#}
         <table id="table" class="table table-bordered tablesorter">
             <thead>
                 <tr>
