--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/MHB/MHB_Modul_Liste.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/MHB/MHB_Modul_Liste.html.twig
@@ -7,7 +7,7 @@
         });
     </script>
     <div class="table-responsive">
-        <h3>Modulhandbücher</h3>
+        {# <h3>Modulhandbücher</h3> #}
         <table id="table" class="table table-bordered tablesorter">
             <thead>
                 <tr>
