--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Veranstaltung/alleModule.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Veranstaltung/alleModule.html.twig
@@ -7,7 +7,7 @@
         });
     </script>
     <div class="table-responsive">
-        <h3>Veranstaltungs Übersicht</h3>
+        <h3>Veranstaltungsübersicht</h3>
         <table id="table" class="table table-bordered tablesorter">
             <thead>
                 <tr>
