alle Routen auf path() geändert

--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/MHB/mhbErstellung.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/MHB/mhbErstellung.html.twig
@@ -21,7 +21,7 @@
             <tbody>
             {% for entity in angebote %}
                 <tr>
-                    <td><a href="{{'/restricted/dozent/modulbearbeiten/'~entity.getVeranstaltung().getModulID }}">{{ entity.getVeranstaltung().getName() }}</td>
+                    <td><a href="{{ path('modulBearbeiten', {'id': entity.getVeranstaltung().getModulID()}) }}">{{ entity.getVeranstaltung().getName() }}</a></td>
                     <td>{{ entity.getVeranstaltung().getKuerzel() }}</td>
                     <td>{{ entity.getVeranstaltung().getVersionsnummer() }}</td>
                     <td>{{ entity.getVeranstaltung().getHaeufigkeit() }}</td>
