--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/MHB/MHB_Modul_Liste.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/MHB/MHB_Modul_Liste.html.twig
@@ -21,7 +21,7 @@
             <tbody>
             {% for entity in mhb %}
                 <tr>
-                    <td><a href="{{ '/restricted/dozent/modulbearbeiten/'~entity['Modul_ID'] }}">{{ entity['name'] }}</td>
+                    <td><a href="{{ path('modulBearbeiten', {'id': entity['Modul_ID']}) }}">{{ entity['name'] }}</a></td>
                     <td>{{ entity['kuerzel'] }}</td>
                     <td>{{ entity['code'] }}</td>
                     <td>{{ entity['versionsnummer'] }}</td>
