--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/MHB/MHB_Modul_Uebersicht.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/MHB/MHB_Modul_Uebersicht.html.twig
@@ -20,7 +20,7 @@
             <tbody>
             {% for entity in mhb %}
                 <tr>
-                    <td><a href="{{ '/restricted/sgl/mhbModulListe/'~entity.getMHBID() }}">{{ entity.Beschreibung }}</td>
+                    <td><a href="{{ path('mhbModulListe', {'id': entity.getMHBID()}) }}">{{ entity.Beschreibung }}</a></td>
                     <td>{{ entity.getGueltigAb() }}</td>
                     <td>{{ entity.getVersionsnummer() }}</td>
                     {# bei Date wird immer |date('Y-m-d') benötigt um als String zu casten #}
