--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Veranstaltung/modulCodeUebersicht.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Veranstaltung/modulCodeUebersicht.html.twig
@@ -19,7 +19,7 @@
             <tbody>
             {% for dummy in dummyAngebote %}
                 <tr>
-                    <td><a href="{{'/restricted/sgl/modulCodeErstellung/'~dummy.getVeranstaltung().getModulID()}}">{{dummy.getVeranstaltung()}}</a></td>
+                    <td><a href="{{ path('modulCodeErstellung', {'id': dummy.getVeranstaltung().getModulID()}) }}">{{ dummy.getVeranstaltung() }}</a></td>
                     {# bei Date wird immer |date('Y-m-d') benötigt um als String zu casten #}
                     <td>{{dummy.getVeranstaltung().getErstellungsdatum()|date('d.m.Y')}}</td>
                 </tr>
@@ -38,7 +38,7 @@
             <tbody>
             {% for normal in angebote %}
                 <tr>
-                    <td><a href="{{'/restricted/sgl/modulCodeErstellung/'~normal.getVeranstaltung().getModulID()}}">{{ normal.getVeranstaltung() }}</a></td>
+                    <td><a href="{{ path('modulCodeErstellung', {'id': normal.getVeranstaltung().getModulID()}) }}">{{ normal.getVeranstaltung() }}</a></td>
                     {# bei Date wird immer |date('Y-m-d') benötigt um als String zu casten #}
                     <td>{{ normal.getVeranstaltung().getErstellungsdatum()|date('d.m.Y') }}</td>
                 </tr>
