--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Veranstaltung/alleModule.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Veranstaltung/alleModule.html.twig
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="table-responsive">
-    <h3>Veranstaltungs Übersicht</h3>
+    <h3>Veranstaltungsübersicht</h3>
     <table class="table table-bordered" >
         <thead>
         <tr>
