--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Veranstaltung/modulbearbeiten.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Veranstaltung/modulbearbeiten.html.twig
@@ -15,7 +15,7 @@
     <div class="table-responsive">
         {{ form_start(form, {attr: {novalidate: 'novalidate'}}) }}
         <table class="table table-bordered">
-            {{ form_row(form.status) }}
+           {# {{ form_row(form.status) }}#}
             {{ form_row(form.leistungspunkte) }}
             {{ form_row(form.kuerzel) }}
             {{ form_row(form.name) }}
